--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
         <a href="https://www.youtube.com/embed/live_stream?channel=UChmNZQg06jCB5xXHSAQQNpA&autoplay=1">Adoration 2</a>
       </div>
       <div id="info">
-        Time goes here
+        <div>
+          <div id="time">12:54 PM</div>
+          <div id="date">09/19/2021</div>
+          <div id="day">Saturday, September 19</div>
+        </div>
+        <div>
+          <div id="temperature">87 Fº</div>
+          <div id="weather-icon">[icon]</div>
+          <div id="weather-glimpse">Sunny</div>
+          <div id="weather-full">It's gonna rain or somethin.</div>
+        </div>
+        <div id="feastday">Saint of the Day</div>
       </div>
     </div>
 
