Update feast day every 5 hours.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sidebar</title>
   <link rel="stylesheet" href="./style.css">
+  <script src="./node_modules/romcal/dist/romcal.bundle.min.js"></script>
 </head>
 
 <body>
