--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div>
           <div id="temperature">87 Fº</div>
-          <div id="weather-icon">[icon]</div>
+          <img id="weather-icon">
           <div id="weather-glimpse">Sunny</div>
           <div id="weather-full">It's gonna rain or somethin.</div>
         </div>
