Last stuff except menu.

--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
         <a href="https://www.youtube.com/embed/live_stream?channel=UChmNZQg06jCB5xXHSAQQNpA&autoplay=1">Adoration 2</a>
       </div>
       <div id="info">
-        <div>
+        <div id="timeinfo">
           <div id="time">12:54 PM</div>
           <div id="date">09/19/2021</div>
           <div id="day">Saturday, September 19</div>
         </div>
         <div>
-          <div id="temperature">87 Fº</div>
-          <img id="weather-icon">
-          <div id="weather-glimpse">Sunny</div>
+          <div id="temprow">
+            <div id="temperature">87 Fº</div>
+            <img id="weather-icon">
+            <div id="weather-glimpse">Sunny</div>
+          </div>
           <div id="weather-full">It's gonna rain or somethin.</div>
         </div>
         <div id="feastday">Saint of the Day</div>
