--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
           <div id="temprow">
             <div id="temperature">87 Fº</div>
             <img id="weather-icon">
-            <div id="weather-glimpse">Sunny</div>
+            <div id="weather-glimpse">
+              <div id="weather-glimpse-desc"></div>
+              <div id="weather-glimpse-max"></div>
+              <div id="weather-glimpse-min"></div>
+            </div>
           </div>
           <div id="weather-full">It's gonna rain or somethin.</div>
         </div>
