--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <div id="root">
 
     <div id="top">
-      <iframe src="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1"
+      <iframe name="ifr" src="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1"
         frameborder="0"></iframe>
     </div>
 
 
     <div id="bottom">
-      <div id="navlinks">
-        <a href="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1">Adoration 1</a>
-        <a href="https://www.youtube.com/embed/live_stream?channel=UChmNZQg06jCB5xXHSAQQNpA&autoplay=1">Adoration 2</a>
+      <div id="navlinks" class="box">
+        <a href="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1" target="ifr">Adoration 1</a>
+        <a href="https://www.youtube.com/embed/live_stream?channel=UChmNZQg06jCB5xXHSAQQNpA&autoplay=1" target="ifr">Adoration 2</a>
       </div>
       <div id="info">
         <div id="timeinfo">
