--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
   <div id="root">
 
     <div id="top">
-      <iframe name="ifr" src="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1"
-        frameborder="0"></iframe>
+      <img src="blessedsacrament.png" style="max-width: 100%; max-height: 100%; aspect-ratio: 496 / 279;">
     </div>
 
 
     <div id="bottom">
       <div id="navlinks" class="box">
-        <a href="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1" target="ifr">Adoration 1</a>
-        <a href="https://www.youtube.com/embed/live_stream?channel=UChmNZQg06jCB5xXHSAQQNpA&autoplay=1" target="ifr">Adoration 2</a>
+        <a onclick="makelive(event)"
+          href="https://www.youtube.com/embed/live_stream?channel=UCTv8s3mfmdIIXNcw_5Pdv_w&autoplay=1"
+          target="ifr">Adoration 1</a>
+        <a onclick="makelive(event)"
+          href="https://www.youtube.com/embed/live_stream?channel=UChmNZQg06jCB5xXHSAQQNpA&autoplay=1"
+          target="ifr">Adoration 2</a>
+        <a href="#" onclick="makestatic(event)">Static</a>
       </div>
       <div id="info">
         <div id="timeinfo">
